--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +12,27 @@
         layout="@layout/actionbar">
         </include>
 
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="60dp">
+        >
+    </com.google.android.material.tabs.TabLayout>
+
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:paddingTop="120dp">
+
+    </androidx.viewpager.widget.ViewPager>
+
+
+
     <ImageView
         android:id="@+id/ivEstrella"
         android:layout_width="@dimen/logos_actionbar"
@@ -19,34 +41,11 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/margen_ivHueso_Amarillo"
         android:elevation="@dimen/elevacion_btnEstrella"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="@dimen/margen_derechoBtnEstrella"
+        android:layout_marginStart="@dimen/margen_ibEstrella_activitymain"
         android:onClick="IraSegundaActividad"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvContactos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/miActionBar"
-        android:layout_marginBottom="@dimen/margen_cvInferior"
-        >
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <!--
-    <TextView
-        android:id="@+id/tvText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
--->
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
