--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActividadesPrincipales.Topperritos">
+    tools:context=".ActividadesPrincipales.AcercaDe">
 
     <include android:id="@+id/miActionBar"
         layout="@layout/actionbar">
     </include>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvContactos2"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/miActionBar"
-        android:layout_marginBottom="@dimen/margen_cvInferior"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
-
+        android:text="@string/tv_Acerca_de"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/Texto_mAcercade"
+        android:textStyle="bold"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
