--- a/app/src/main/res/menu/menu_opciones.xml
+++ b/app/src/main/res/menu/menu_opciones.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/opciones"
+        android:id="@+id/mContacto"
         android:title="@string/menuOpciones"
         android:orderInCategory="103"
-        ></item>
+        />
 
     <item
-        android:id="@+id/informacion"
+        android:id="@+id/mAcercaDe"
         android:title="@string/menuInformacion"
+        android:orderInCategory="104"
+        />
+
+<!--
+    <item
+        android:id="@+id/mTopPerritos"
+        android:title="@string/mTopPerritos"
         android:orderInCategory="102"
-        ></item>
+        app:showAsAction="always"
+        android:icon="@drawable/baseline_star_black_18dp"/>
+        -->
+
 
 </menu>
